--- a/index.html
+++ b/index.html
@@ -1,9 +1,18 @@
-.topnav {
-  background-color: #333;
-  overflow: hidden;
+<!DOCTYPE html>
+<html>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+body {
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-/* Style the links inside the navigation bar */
+.topnav {
+  overflow: hidden;
+  background-color: #333;
+}
+
 .topnav a {
   float: left;
   color: #f2f2f2;
@@ -13,14 +22,32 @@
   font-size: 17px;
 }
 
-/* Change the color of links on hover */
 .topnav a:hover {
   background-color: #ddd;
   color: black;
 }
 
-<div class="topnav">
-  <a href="#home">Home</a>
-  <a href="#news">News</a>
-  <a href="#contact">Contact</a>
+/* Create a right-aligned (split) link inside the navigation bar */
+.topnav a.split {
+  float: right;
+  background-color: #04AA6D;
+  color: white;
+}
+</style>
+</head>
+<body>
+  
+<div style="padding-left:16px">
+  <p>I want to:</p>
 </div>
+  
+<div class="topnav">
+  <a href="#news">transition from</a>
+  <a href="#contact">transition to</a>
+  <a href="#about" class="split">ask for help</a>
+</div>
+
+
+
+</body>
+</html>
