--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@ body {
 </div>
   
 <div class="topnav">
-  <a href="/transition_from">transition from</a>
-  <a href="#contact">transition to</a>
+  <a href="#transition_from">transition from</a>
+  <a href="#transition_to">transition to</a>
   <a href="#about" class="split">ask for help</a>
 </div>
   
