--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ body {
 </div>
   
 <div class="topnav">
-  <a href="tm_transition_search/web/trans_from">transition from</a>
+  <a href="web/trans_from">transition from</a>
   <a href="#transition_to">transition to</a>
   <a href="#about" class="split">ask for help</a>
 </div>
