--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ body {
   
 <div class="topnav">
   <a href="web/trans_from">transition from</a>
-  <a href="#transition_to">transition to</a>
+  <a href="web/trans_from">transition to</a>
   <a href="#about" class="split">ask for help</a>
 </div>
   
