--- a/web/trans_from.html
+++ b/web/trans_from.html
@@ -82,6 +82,14 @@
       </div>
     </div>
 
+        <div class="folder">
+          <div class="folder-name">Banked</div>
+          <div class="folder-content">
+            <div class="item" data-block-id="road_curve_banked_left">Banked Left</div>
+            <div class="item" data-block-id="road_curve_banked_right">Banked Right</div>
+          </div>
+        </div>
+
     <!-- Items directly under "Road" -->
     <div class="item" data-block-id="road_start">Start Block</div>
   </div>
