--- a/web/trans_from.html
+++ b/web/trans_from.html
@@ -83,6 +83,16 @@
 </head>
 <body>
 
+<div style="padding-left:16px">
+  <p>I want to:</p>
+</div>
+  
+<div class="topnav">
+  <a href="web/trans_from">transition from</a>
+  <a href="web/trans_from">transition to</a>
+  <a href="#about" class="split">ask for help</a>
+</div>
+
 <h2>Select a Block</h2>
 
 <!-- Root Folder -->
