--- a/web/trans_from.html
+++ b/web/trans_from.html
@@ -92,8 +92,10 @@
   <a href="web/trans_from">transition to</a>
   <a href="#about" class="split">ask for help</a>
 </div>
-
-<h2>Select a Block</h2>
+  
+<div style="padding-left:16px">
+  <h2>Select a Block</h2>
+</div>
 
 <!-- Root Folder -->
 <div class="folder">
