--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ body {
 <div class="topnav">
   <a href="web/trans_from">transition from</a>
   <a href="web/trans_from">transition to</a>
-  <a href="#about" class="split">ask for help</a>
+  <a href="web/about" class="split">ask for help</a>
 </div>
   
 </body>
