--- a/index.html
+++ b/index.html
@@ -47,5 +47,9 @@ body {
   <a href="web/about" class="split">ask for help</a>
 </div>
   
+<div style="padding-left:16px">
+  <h2>Last Updated: 25th June 2025</h2>
+  <h2>Unique Transitions: 0</h2>
+</div>
 </body>
 </html>
