--- a/index.html
+++ b/index.html
@@ -33,6 +33,22 @@ body {
   background-color: #04AA6D;
   color: white;
 }
+
+  .footer-info {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  background-color: #f1f1f1;
+  padding: 10px 20px;
+  display: flex;
+  justify-content: space-between;
+  font-family: Arial, sans-serif;
+  font-size: 14px;
+  border-top: 1px solid #ccc;
+  box-sizing: border-box;
+}
+
 </style>
 </head>
 <body>
@@ -47,9 +63,9 @@ body {
   <a href="web/about" class="split">ask for help</a>
 </div>
   
-<div style="padding-left:16px">
-  <h2>Last Updated: 25th June 2025</h2>
-  <h2>Unique Transitions: 0</h2>
+<div class="footer-info">
+  <span>Last Updated: 25th June 2025</span>
+  <span>Unique Transitions: 0</span>
 </div>
 </body>
 </html>
