--- a/web/trans_from.html
+++ b/web/trans_from.html
@@ -88,8 +88,8 @@
 </div>
   
 <div class="topnav">
-  <a href="web/trans_from">transition from</a>
-  <a href="web/trans_from">transition to</a>
+  <a href="trans_from">transition from</a>
+  <a href="trans_from">transition to</a>
   <a href="#about" class="split">ask for help</a>
 </div>
   
