--- a/web/trans_from.html
+++ b/web/trans_from.html
@@ -90,7 +90,7 @@
 <div class="topnav">
   <a href="trans_from">transition from</a>
   <a href="trans_from">transition to</a>
-  <a href="#about" class="split">ask for help</a>
+  <a href="about" class="split">ask for help</a>
 </div>
   
 <div style="padding-left:16px">
