--- a/web/trans_from.html
+++ b/web/trans_from.html
@@ -142,14 +142,7 @@
   </div>
 </div>
 
-<script>
-  // Example event listener to show block ID when clicked
-  document.querySelectorAll('.item').forEach(item => {
-    item.addEventListener('click', () => {
-      alert("Selected block ID: " + item.dataset.blockId);
-    });
-  });
-</script>
+<script src="navigation.js"></script>
 
 </body>
 </html>
