--- a/web/trans_from.html
+++ b/web/trans_from.html
@@ -108,6 +108,13 @@
       <div class="folder-content">
         <div class="item" data-block-id="road_straight_1">Straight 1</div>
         <div class="item" data-block-id="road_straight_2">Straight 2</div>
+        <div class="folder">
+          <div class="folder-name">Elevation</div>
+          <div class="folder-content">
+            <div class="item" data-block-id="road_straight_up_1">Up 1</div>
+            <div class="item" data-block-id="road_straight_up_1">Up 2</div>
+          </div>
+        </div>
       </div>
     </div>
 
