--- a/web/trans_from.html
+++ b/web/trans_from.html
@@ -8,7 +8,7 @@
     body {
       font-family: Arial, sans-serif;
       margin: 0;
-      padding: 20px;
+      padding: 0;
     }
     
 .topnav {
