--- a/web/trans_from.html
+++ b/web/trans_from.html
@@ -41,27 +41,30 @@
     }
 
     #browser {
-      display: flex;
-      flex-wrap: wrap;
       padding: 16px;
-      gap: 10px;
+    }
+
+    .entry {
+      margin-left: 20px;
+      margin-top: 6px;
     }
 
     button {
-      padding: 12px 16px;
+      padding: 8px 12px;
       border: none;
       background-color: #eee;
       cursor: pointer;
-      font-size: 16px;
+      font-size: 15px;
       border-radius: 6px;
+      margin: 4px 0;
     }
 
     button:hover {
       background-color: #ddd;
     }
 
-    .back-button {
-      background-color: #ffcbcb;
+    .folder-label {
+      font-weight: bold;
     }
   </style>
 </head>
