--- a/web/trans_from.html
+++ b/web/trans_from.html
@@ -43,14 +43,13 @@
     #browser {
       padding: 16px;
       display: flex;
-      flex-direction: column; /* vertical stack of rows */
+      flex-direction: column;
       gap: 12px;
     }
 
     .level-row {
       display: flex;
       gap: 12px;
-      /* horizontally lay out siblings */
     }
 
     button {
