--- a/web/trans_from.html
+++ b/web/trans_from.html
@@ -78,7 +78,11 @@
   </style>
 </head>
 <body>
-
+  
+  <div style="padding-left:16px">
+    <h2>I want to:</h2>
+  </div>
+  
   <div class="topnav">
     <a href="trans_from">Transition from</a>
     <a href="trans_to">Transition to</a>
